# scalable-demo-2021-t3

lessons/03/foodtrucks-k8s/: CMDS  backend-deploy.yaml  elastic-deploy.yaml
lessons/03/locust/: pyproject.toml
lessons/03/servers/flask/: pyproject.toml
lessons/04/: readme.md
lessons/04/bullseye/: bullseye.yaml
lessons/04/elk/: elasticsearch.yaml  ingress.yaml  kibana.yaml  log-app-with-filebeat-sidecar.yaml  logstash.yaml
lessons/10/tracing/: docker-compose.yml
lessons/10/tracing/api-service/src/main/java/com/example/demo/: ErrorHandler.java
lessons/10/tracing/customer-service/src/main/java/com/example/demo/: Controller.java  ErrorHandler.java
lessons/11/: README.md
lessons/11/protos/: helloworld.proto
lessons/11/python/: Makefile  greeter_server.py  pyproject.toml
lessons/11/rust/: Cargo.toml
lessons/11/rust/src/: main.rs
