[tool.poetry]
name = "python-grpc-demo"
version = "0.1.0"
description = ""
authors = ["Kanat Tangwongsan <kanat.tan@mahidol.edu>"]
readme = "README.md"
packages = [{include = "python_grpc_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.47.0"
grpcio-tools = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
