[package]
name = "helloworld-grpc-rust"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/main.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"

